--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="200dp"
         />
 
-    <EditText
+    <TextView
         android:id="@+id/login_phone_number_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         android:textStyle="bold"
         tools:ignore="TextFields" />
 
-    <EditText
+    <TextView
         android:id="@+id/login_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,10 +45,10 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="6dp"
         android:hint="@string/password"
-        android:inputType="number"
+        android:inputType="textPassword"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimaryDark"
-        android:textSize="17sp"
+        android:textSize="19sp"
         android:textStyle="bold"
         tools:ignore="TextFields" />
 
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="17sp"
+            android:textSize="19sp"
             android:textStyle="bold"
             android:layout_marginStart="80dp"
             />
